crates/dsrs-macros/tests/ui/input_unknown_arg.rs
use dsrs_macros::Signature;

#[derive(Signature)]
struct InputUnknownArg {
    #[input(foo = "bar")]
    question: String,

    #[output]
    answer: String,
}

fn main() {}
